force-app/main/default/objects/mcdm_15__DM_Auto_Send__c/fields/mcdm_15__Campaign__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>DM Auto Send</relationshipLabel>
    <relationshipName>DM_Auto_Send</relationshipName>
    <type>Lookup</type>
</CustomField>