force-app/main/default/objects/mcdm_15__DM_Auto_Send__c/fields/mcdm_15__Friendly_Error__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Friendly_Error__c</fullName>
    <description>A friendly error is shown to the standard user in this field, if something went wrong with the chunk processing overall and not at the individual member level.</description>
    <label>Friendly Error</label>
    <type>TextArea</type>
</CustomField>