force-app/main/default/objects/mcdm_15__DM_Auto_Send__c/fields/mcdm_15__Send_Time__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Send_Time__c</fullName>
    <label>Send Time</label>
    <type>DateTime</type>
</CustomField>