force-app/main/default/objects/mcdm_15__DM_Auto_Send__c/listViews/Onboarding_Queue_DM_Auto_Send.listView-meta.xml
<ListView>
    <fullName>Onboarding_Queue_DM_Auto_Send</fullName>
    <filterScope>Queue</filterScope>
    <label>Onboarding Queue</label>
    <queue>Onboarding_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>